--- a/app/views/editorial/_blocco_eventi.erb
+++ b/app/views/editorial/_blocco_eventi.erb
@@ -21,18 +21,18 @@
                       image_tag("/images/commons/sections/no-img.jpg", :width => 100)
                     end
                   else
-                    begin
-                      image_tag(@conv_prossimo.immagine_url, :alt => h(truncate(@conv_prossimo.subject, :length => 25)))
-                    rescue
-                      image_tag("/images/commons/sections/no-img.jpg")
+                    if FileTest.exist?("#{RAILS_ROOT}/public/images/articles/#{@conv_prossimo.immagine_url}")
+                        image_tag(@conv_prossimo.immagine_url, :alt => h(truncate(@conv_prossimo.subject, :length => 25 )),:width => 100)
+                    else
+                        image_tag("/images/articles/no-img.jpg",:width => 100)
                     end
                   end
               %>
               <span> <%= link_to(h(@conv_prossimo.subject), :controller => 'editorial', :action => "evento", :id => @conv_prossimo.id, :escape => false) %></span>
 
-              <p>
+
                 <%= link_to(h(smart_truncate(@conv_prossimo.riassunto, 120)), :controller => 'editorial', :action => "evento", :id => @conv_prossimo.id, :escape => false) %>
-                <%= link_to "Più info ", url_for(:controller => 'editorial', :action => "evento", :id => @conv_prossimo.id, :escape => false), :class => "fs-giallo-inline-button" %></p>
+                <%= link_to "Visualizza... ", url_for(:controller => 'editorial', :action => "evento", :id => @conv_prossimo.id, :escape => false), :class => "fs-vuoto-inline-button" %>
               <br/>
             </div>
             <div class="clearfix"></div>
@@ -54,7 +54,7 @@
                                 <span> <%= link_to(h(con.subject), :controller => 'editorial', :action => "evento", :id => con.id, :escape => false) %>
                                   <%= link_to "Visualizza...", url_for(:controller => 'editorial', :action => "evento", :id => con.id, :escape => false), :class => "fs-vuoto-inline-button" %>
                                 </span>
-                  <br/>
+                  <br/> &nbsp;
                 </div>
                 <div class="clearfix"></div>
               </div>
