--- a/app/views/editorial/_blocco_sidebar1.erb
+++ b/app/views/editorial/_blocco_sidebar1.erb
@@ -10,8 +10,9 @@
     <%# render :partial =>  'blocco_ricerca' %>
     <%# render :partial => 'blocco_banners1' %>
     <%# render :partial => 'blocco_account' %>
+  <% if !@articolo.nil? %>
     <%= render :partial => 'blocco_art_evidenziati' %>
-
+     <%	end  %>
 
 </div>
 
