changed issues columns names: rake db:migrate:up VERSION=20130131220327

--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -57,7 +57,7 @@
             <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
           </div>
           <div class="fs-riassunto-full"> <p>
-            <%= h(smart_truncate(articolo.riassunto, 200)) %></p></div>
+            <%= h(smart_truncate(articolo.summary, 200)) %></p></div>
           <br/>
         </div>
         <div class="clearfix">&nbsp; <br />&nbsp; <br /></div>
