--- a/app/views/editorial/_viste_non_utilizzate/altro.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/altro.html.erb
@@ -15,7 +15,7 @@
                 <span class="fs-postauthoricon">  Autore:<%= h articolo.author %>
                 </span>
                 <br/>
-                <%= articolo.riassunto %>
+                <%= articolo.summary %>
                 <%= link_to "Continua... ", {:controller => 'issues', :action => 'show', :id => articolo.id} %>
             </div>
           </div>
