--- a/app/views/editorial/_viste_non_utilizzate/sezione.html - Copia.erb
+++ b/app/views/editorial/_viste_non_utilizzate/sezione.html - Copia.erb
@@ -20,7 +20,7 @@
                         <%# avatar articolo.author_id, :size => "50" %> <%=h articolo.author %>
                       </div>
                         <br />
-                      <div class="fs-postcontent" >   <%= articolo.riassunto %>
+                      <div class="fs-postcontent" >   <%= articolo.summary %>
                       </div>
 
                               <span class="fs-button-wrapper">
