--- a/app/views/editorial/evento.erb
+++ b/app/views/editorial/evento.erb
@@ -47,7 +47,7 @@
                           %>
                         </div>
                         <div class="fs-riassunto-full"><p>
-                          <%= h(smart_truncate(@convegno.riassunto, 200)) %></p>
+                          <%= h(smart_truncate(@convegno.summary, 200)) %></p>
                         </div>
                       </div>
                       <div class="clearfix"></div>
