--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -13,7 +13,7 @@
   <ul>
    <li><%=l(:field_is_public)%>: <%= checked_image @project.is_public? %></li>
    <li><%=l(:label_date_from)%> <%= format_date @project.data_dal %> <%=l(:label_date_to)%> <%= format_date @project.data_al %> </li>
-   <li style="display:none"><%=l(:label_titolo)%> <%= @project.subject %></li>
+   <li style="display:none"><%=l(:label_titolo)%> <%= @project.titolo %></li>
    <li><%=l(:label_search_key)%> <%= @project.search_key %></li>
    
   <% unless @project.homepage.blank? %><li><%=l(:field_homepage)%>: <%= auto_link(h(@project.homepage)) %></li><% end %>
