--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -44,7 +44,7 @@
                           </div>
                       <% end %>
                     </div>
-                    <%= articolo.riassunto %>
+                    <%= articolo.summary %>
                     <br/>
                     <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false) %>
                   </div>
