--- a/app/views/editorial/_viste_non_utilizzate/_save/_articolo_pinned.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/_articolo_pinned.html.erb
@@ -17,7 +17,7 @@
 
         <div class="fs-postcontent" style="line-height:11px; font-size:11px;">
 
-          <%= link_to (h(truncate(articolo.riassunto, :length => 125)),
+          <%= link_to (h(truncate(articolo.summary, :length => 125)),
               url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false))
           %>
           <br/></div>
