--- a/app/views/editorial/_viste_non_utilizzate/_save/ediz_shadow.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/ediz_shadow.erb
@@ -255,7 +255,7 @@
                 <!-- riga riassunto -->
                 <td width="560" colspan="2">
                   <font style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#000000; line-height:18px; ">
-                    <%= articolo.riassunto %>
+                    <%= articolo.summary %>
                   </font><br/>
                 </td>
               </tr>
