--- a/app/views/editorial/_viste_non_utilizzate/_save/ediz_sicontents.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/ediz_sicontents.html.erb
@@ -85,7 +85,7 @@ In questa pagina:
               <!-- riga riassunto -->
               <td width="580" colspan="2">
                 <font style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#000000; line-height:18px; ">
-                  <%= articolo.riassunto %>
+                  <%= articolo.summary %>
                 </font><br/>
               </td>
             </tr>
