--- a/app/views/editorial/_viste_non_utilizzate/articoli.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/articoli.html.erb
@@ -17,7 +17,7 @@
                         <%# avatar articolo.author_id, :size => "50" %> <%=h articolo.author %>
                       </div>
                         <br />
-                      <div class="fs-postcontent" >   <%= articolo.riassunto %>
+                      <div class="fs-postcontent" >   <%= articolo.summary %>
                       </div>
 
                               <span class="fs-button-wrapper">
@@ -51,7 +51,7 @@
     <th><%=l(:field_project)%></th>
     <th><%=l(:field_author)%></th>
        <th><%=l(:field_section)%></th>
-        <th><%=l(:field_riassunto)%></th>
+        <th><%=l(:field_summary)%></th>
     <th><%=l(:field_subject)%></th>
     </tr></thead>
     <tbody>
@@ -64,7 +64,7 @@
       <td class="project"><%= link_to_project(issue.project) %></td>
       <td class="tracker"><%=h issue.author %></td>
        <td class="tracker"><%=h issue.section %></td>
-      <td class="tracker"><%=h issue.riassunto %></td>
+      <td class="tracker"><%=h issue.summary %></td>
       <td class="subject">
         <%= link_to h(truncate(issue.subject, :length => 60)), :controller => 'issues', :action => 'show', :id => issue %> (<%=h issue.status %>)
       </td>
