--- a/app/views/editorial/ediz_test.html.erb
+++ b/app/views/editorial/ediz_test.html.erb
@@ -243,7 +243,7 @@
                               <!-- riga riassunto -->
                               <td width="580" colspan="2">
                                 <font style="font-family:Arial, Helvetica, sans-serif; font-size:15px; color:#000000; line-height:18px; ">
-                                  <%= articolo.riassunto %>
+                                  <%= articolo.summary %>
                                 </font><br/>
                               </td>
                             </tr>
