--- a/app/views/editorial/quesiti.html.erb
+++ b/app/views/editorial/quesiti.html.erb
@@ -49,7 +49,7 @@
 
 
                     </div>
-                    <%= articolo.riassunto %>
+                    <%= articolo.summary %>
                     <br/>
                     <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false) %>
                   </div>
